; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_nv41.c_nv41_mmu_new.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/mmu/extr_nv41.c_nv41_mmu_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_device = type { i64, i32 }
%struct.nvkm_mmu = type { i32 }

@NVKM_DEVICE_AGP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"NvPCIE\00", align 1
@nv41_mmu = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nv41_mmu_new(%struct.nvkm_device* %0, i32 %1, %struct.nvkm_mmu** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nvkm_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nvkm_mmu**, align 8
  store %struct.nvkm_device* %0, %struct.nvkm_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.nvkm_mmu** %2, %struct.nvkm_mmu*** %7, align 8
  %8 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %9 = getelementptr inbounds %struct.nvkm_device, %struct.nvkm_device* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @NVKM_DEVICE_AGP, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %19, label %13

13:                                               ; preds = %3
  %14 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %15 = getelementptr inbounds %struct.nvkm_device, %struct.nvkm_device* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @nvkm_boolopt(i32 %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 1)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %13, %3
  %20 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.nvkm_mmu**, %struct.nvkm_mmu*** %7, align 8
  %23 = call i32 @nv04_mmu_new(%struct.nvkm_device* %20, i32 %21, %struct.nvkm_mmu** %22)
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %13
  %25 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.nvkm_mmu**, %struct.nvkm_mmu*** %7, align 8
  %28 = call i32 @nvkm_mmu_new_(i32* @nv41_mmu, %struct.nvkm_device* %25, i32 %26, %struct.nvkm_mmu** %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %24, %19
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @nvkm_boolopt(i32, i8*, i32) #1

declare dso_local i32 @nv04_mmu_new(%struct.nvkm_device*, i32, %struct.nvkm_mmu**) #1

declare dso_local i32 @nvkm_mmu_new_(i32*, %struct.nvkm_device*, i32, %struct.nvkm_mmu**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
